Release Note

* current
  * fixed SetupperAtlas to ignore DQFrozenDatasetException when making _dis
  * added support for multiple ES consumer
  * changed changeTaskPriority to propagate changes to jobs too 
  * fixed dataset lookup by file GUID to allow wildcard search
  * changed to send input/output map to the pilot for ES merge
  * removed old TAPE check for BNL from brokerage
  * disabled PandaMover for US
  * changed Adder to register log files for ES
  * changed the protection for un-formatted HC destinationDBlock
  * added setDebugMode.py
  * added a protection against un-formatted destinationDBlock for HC	
  * using specialHandling=eventservice
  * changed Setupper to have a plugin structure
  * changed the brokerage to use CVMFS check for nightlies
  * added reassignTask
  * fixed jedi_events.endEvent
  * added a build number to version name
  * added cpuConsumptionTime to updateEventRanges
  * improved format of specialHandling for ES
  * adde actualCoreCount
  * improved to update t_task.total_events
  * fixed keepJob to append attemptNr correctly
  * disabled pandamover for AGLT2
  * removed updateFileMetadataInJEDI
  * added a protection against old JEDI jobs w/o fileIDs
  * changed to update nEvents in JEDI tables
  * changed to update total_req_jobs in t_task
  * changed the brokerge to use wildcard matching for ROOT
  * fixed the brokerage for bulk file lookup
  * fixed the brokearge to accept CVMFS ROOT version format
  * fixed the brokerage to use correct catalog for file lookup
  * set array size in setGUID
  * reseting computingElement for rebrokerage
  * giving higher priorities to pmerge
  * added WAN throttling
  * fixed reassignSite
  * sending coreCount to the pilot
  * fixed AdderAtlas for rucio
  * fixed for Rucio migration
  * updating t_task.total_done_jobs
  * changed killTask and finishTask to return a proper error code
  * removed reqid and step_id from t_task
  * split mcore queue so that each site has one